--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "dotenv": "16.4.5",
     "fastify": "4.28.1",
     "tsup": "8.2.4",
-    "tsx": "4.18.0"
+    "tsx": "4.18.0",
+    "zod": "3.23.8"
   }
 }
