--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "devDependencies": {
     "@rocketseat/eslint-config": "2.2.2",
     "@types/node": "22.5.0",
+    "prisma": "5.18.0",
     "typescript": "5.5.4"
   },
   "dependencies": {
+    "@prisma/client": "5.18.0",
     "dotenv": "16.4.5",
     "fastify": "4.28.1",
     "tsup": "8.2.4",
