--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
 NODE_ENV=dev
+PORT='3333'
+
+#database
+DATABASE_URL="postgresql://docker:docker@localhost:5432/apisolid?schema=public"
+
+#auth
+JWT_SECRET=ignitenode03
+
+NODE_ENV=dev
