--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "start": "node build/server.js",
-    "test:create-prisma-environment":"npm link ./prisma/vitest-environment-prisma",
-    "test:install-prisma-environment":"npm link vitest-environment-prisma",
+    "test:create-prisma-environment": "npm link ./prisma/vitest-environment-prisma",
+    "test:install-prisma-environment": "npm link vitest-environment-prisma",
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
     "test:e2e": "vitest run --dir src/http",
-    "pretest:e2e":"run-s test:create-prisma-environment test:install-prisma-environment",
+    "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
     "test:watch": "vitest run --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
@@ -26,11 +26,12 @@
     "@types/node": "22.5.0",
     "@vitest/coverage-v8": "2.0.5",
     "@vitest/ui": "2.0.5",
+    "npm-run-all": "4.1.5",
     "prisma": "5.18.0",
+    "supertest": "7.0.0",
     "typescript": "5.5.4",
     "vite-tsconfig-paths": "5.0.1",
-    "vitest": "2.0.5",
-    "npm-run-all": "4.1.5"
+    "vitest": "2.0.5"
   },
   "dependencies": {
     "@fastify/jwt": "8.0.1",
