--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "build": "tsup src --out-dir build",
     "test": "vitest run --dir src/use-cases",
     "test:e2e": "vitest run --dir src/http",
+    "test:e2e:watch": "vitest --dir src/http",
     "pretest:e2e": "run-s test:create-prisma-environment test:install-prisma-environment",
-    "test:watch": "vitest run --dir src/use-cases",
+    "test:watch": "vitest --dir src/use-cases",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
   },
@@ -24,6 +25,7 @@
     "@rocketseat/eslint-config": "2.2.2",
     "@types/bcryptjs": "2.4.6",
     "@types/node": "22.5.0",
+    "@types/supertest": "6.0.2",
     "@vitest/coverage-v8": "2.0.5",
     "@vitest/ui": "2.0.5",
     "npm-run-all": "4.1.5",
